# town-collection-cal

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.backend-host.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  integration.yml  publish-image.yml  web-ci.yml  web-pages.yml
docs/: ARCHITECTURE_WEB.md  DEPLOYMENT_VPS.md  PARSING.md  nginx_http_context.conf  nginx_server_security.conf  nginx_site_option1.conf
postman/: town-collection-cal.postman_collection.json
scripts/: run_dev.sh  run_dev_autoport.sh  run_prod_hardened.sh  update_db.sh  validate_db.py
scripts/vps/: deploy_release.sh  release-env.example  run-container.sh  run_db_update.sh
src/town_collection_cal/: __init__.py
src/town_collection_cal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/town_collection_cal/common/: address.py  db_model.py  http_cache.py  (+2 more)
tests/: test_address.py  test_config.py  test_ics.py  test_normalize.py  test_resolver.py  test_schedule.py  test_service_cors.py
tests/fixtures/: westford_guide.txt  westford_routes.txt
tests/parsers/: test_westford_guide.py  test_westford_routes.py
towns/westford_ma/: README.md  holiday_overrides.yaml  holiday_rules.yaml  route_overrides.yaml  street_aliases.yaml  town.yaml
web/: .env.example  .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
web/config/: towns.json
web/public/: 404.html
web/src/: App.tsx  index.css  main.tsx  types.ts
(+24 files in other folders)
